# EmbProject

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.hpp  URIParser.hpp  db_handler.hpp  genHTML.hpp
services/: audio-level.service  cpu-temp.service  data.txt  detectSoundThr.sh  emb-webserver.service  getCPUTemp.sh  getSystemLoad.sh  runServer.sh  system-load.service
src/: Camera.cpp  URIParser.cpp  db_handler.cpp  genHTML.cpp  main.cpp
